--- a/.gitignore
+++ b/.gitignore
@@ -362,4 +362,4 @@ MigrationBackup/
 # Fody - auto-generated XML schema
 FodyWeavers.xsd
 
-AppWithPlugin/Properties/launchSettings.json
+**/launchSettings.json
